Add content in Data Add InEnable Flag, so you can disable unit if you want Structure adjust